update UI user profile, danh sach hoa don

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,7 +64,7 @@
             android:name=".activity.food.CartActivity"
             android:exported="false" />
         <activity
-            android:name=".activity.digital.bill_payment.WaterPayment"
+            android:name=".activity.digital.bill_payment.AddWaterBillActivity"
             android:exported="false" />
         <activity
             android:name=".activity.digital.bill_payment.DetailpaymentActivity"
