--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.HolaImedia"
         tools:targetApi="31">
-        <activity android:name=".activity.delivery.DeliveryOrderManagement"
+        <activity android:name=".activity.digital.data_3g.CheckFacePaymentActivity"
+            android:exported="false" />
+        <activity android:name=".activity.delivery.DeliveryOrderManagementActivity"
             android:exported="false" />
         <activity
             android:name=".activity.delivery.HolaMapActivity"
@@ -67,7 +69,7 @@
             android:name=".activity.digital.bill_payment.AddWaterBillActivity"
             android:exported="false" />
         <activity
-            android:name=".activity.digital.bill_payment.DetailpaymentActivity"
+            android:name=".activity.digital.bill_payment.DetailPaymentActivity"
             android:exported="false" />
         <activity
             android:name=".activity.digital.bill_payment.BillPaymentActivity"
